{
    "name": "Controls",
    "maps": [
        {
            "name": "Player",
            "id": "98a2c1e5-a995-44e4-8c93-ea9da8050376",
            "actions": [
                {
                    "name": "LThumbX",
                    "type": "Value",
                    "id": "bc77e9e2-614e-477a-9681-3800ab313b72",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LThumbY",
                    "type": "Value",
                    "id": "d281339c-5d41-4fb5-8dfb-14d19cfdedf6",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RThumbX",
                    "type": "Value",
                    "id": "4108293e-8d24-4e0c-9bcc-2b97e4ac675b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RThumbY",
                    "type": "Value",
                    "id": "fd4c7b2b-8069-44ca-bc15-d85adb708d26",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LTrigger",
                    "type": "Button",
                    "id": "b148ba7a-f960-4238-a461-d2ecf0097c18",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RTrigger",
                    "type": "Button",
                    "id": "07f7d5fd-4bc2-412e-b71f-cd8fba80be82",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AButton",
                    "type": "Button",
                    "id": "75dc5b06-7641-44b2-908a-f2bf099418d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BButton",
                    "type": "Button",
                    "id": "651cce3f-8dd6-45b0-ad64-798b68f1319e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "376abf9f-d6e3-4fca-a8a4-6455c0e3cb7d",
                    "path": "<OculusTouchController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38e5037d-a525-46bb-8ee9-8ae2267f8a1a",
                    "path": "<OculusTouchController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f32699d1-438c-4459-9a7e-21bef7c97266",
                    "path": "<OculusTouchController>{LeftHand}/thumbstick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LThumbX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57137034-0df4-4f21-b0d0-2c6a76abaa34",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LThumbX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "effbb5c4-1a2c-42ab-98fc-103e50b6015b",
                    "path": "<OculusTouchController>{LeftHand}/thumbstick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LThumbY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8be67b35-17ae-413f-bd15-2b14f314249b",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LThumbY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "beac9a02-9379-4e7f-b6ad-b9873cbb4fa7",
                    "path": "<OculusTouchController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf1c6f63-16c9-4e94-b6dd-1e0009f91aa8",
                    "path": "<OculusTouchController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c829923-f7fe-4eb4-afdb-64803dc01649",
                    "path": "<OculusTouchController>{RightHand}/thumbstick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RThumbY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44d8d970-0a51-47bc-a000-57f8ac9ae296",
                    "path": "<OculusTouchController>{RightHand}/thumbstick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RThumbX",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}